--- a/templates/views/404 page.hbs
+++ b/templates/views/404 page.hbs
@@ -1,7 +1,6 @@
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Web-Server-Index</title>
     <link rel='stylesheet' href='/css/styles.css'>
 
