--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,9 +1,7 @@
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>About</title>
-    <link rel="icon" href="/img/me.png">
     <link rel='stylesheet' href='/css/styles.css'>
 </head>
 <body>
