--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -1,9 +1,7 @@
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Help</title>
-    <link rel="icon" href="/img/help.png">
     <link rel='stylesheet' href='/css/styles.css'>
 </head>
 <body>
