--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,9 +1,7 @@
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Web-Server-Index</title>
-    <link rel="icon" href="/img/ws.jpeg">
     <link rel='stylesheet' href='/css/styles.css'>
     
 </head>
@@ -25,6 +23,5 @@
     
     <p>{{>footer}}</p>
     <script src='/js/app.js'></script>
-
 </body>
 </html>
